[package]
name = "surrealdb-serialization-tests"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
syn = { version = "2.0.68", features = ['full'] }
quote = "1.0"
surrealdb = { version = "1.5.3", features = ["kv-mem"] }
rust_decimal = { version = "1.35.0" }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }